# logger

./: .gitignore  CMakeLists.txt  README.md  main.cpp
log/: logging.cpp  logging.h
