CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
PROJECT(gob)
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
# link boost
MESSAGE(STATUS "Link Boost:")
SET(Boost_USE_MULTITHREAD ON)
SET(Boost_USE_STATIC_LIBS ON)
SET(Boost_USE_STATIC_RUNTIME OFF)

FIND_PACKAGE(Boost COMPONENTS log REQUIRED) # 这里填入需要的component，例如 log, thread ...

IF(Boost_FOUND)
    # MESSAGE(STATUS "Boost_INCLUDE_DIRS ${Boost_INCLUDE_DIRS}")
    # MESSAGE(STATUS "Boost_LIBRARIES ${Boost_LIBRARIES}")
    INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
ENDIF()

# include目录
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/log) # log 文件夹，下面类似
## 

# local source files
AUX_SOURCE_DIRECTORY(. MAIN_SRCS)
AUX_SOURCE_DIRECTORY(log LOG_SRCS)

# generate target
ADD_EXECUTABLE(${PROJECT_NAME} ${MAIN_SRCS} ${LOG_SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${Boost_LIBRARIES})